err/wjordpress.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './lib/python3.5/site-packages/wjordpress'...
Listing './lib/python3.5/site-packages/wjordpress/management'...
Listing './lib/python3.5/site-packages/wjordpress/management/commands'...
Compiling './lib/python3.5/site-packages/wjordpress/management/commands/wjordpress_fetch.py'...
***   File "./lib/python3.5/site-packages/wjordpress/management/commands/wjordpress_fetch.py", line 12
    print u'Fetching {}'.format(site)
                       ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/wjordpress/templates'...
Listing './lib/python3.5/site-packages/wjordpress/templates/admin'...
Listing './lib/python3.5/site-packages/wjordpress/templates/admin/wjordpress'...
Listing './lib/python3.5/site-packages/wjordpress/templates/admin/wjordpress/wplog'...
Listing './lib/python3.5/site-packages/wjordpress/templates/wjordpress'...
Listing './lib/python3.5/site-packages/wjordpress/templatetags'...
Listing './lib/python3.5/site-packages/wjordpress-0.2.2.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
